--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ services:
 script:
 - make image
 
-before_deploy:
-- docker login -u $DOCKER_USER -p $DOCKER_PASS
+# before_deploy:
+# - docker login -u $DOCKER_USER -p $DOCKER_PASS
 
-deploy:
-- provider: script
-  script: make push
-  on:
-    branch: master
-    tags: true
+# deploy:
+# - provider: script
+#   script: make push
+#   on:
+#     branch: master
+#     tags: true
